--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,11 @@ environment:
 
 dependencies:
   js: any
+  json_annotation: any
 
 dev_dependencies:
   build_runner: ^0.10.0
   build_web_compilers: ^0.4.0
   webdev: any
+  json_serializable: any
+
